sif_macro/tests/fail/inequal_amount_of_arg.stderr
error: custom attribute panicked
 --> $DIR/inequal_amount_of_arg.rs:3:1
  |
3 | #[parameterized]
  | ^^^^^^^^^^^^^^^^
  |
  = help: message: assertion failed: `(left == right)`
            left: `2`,
           right: `1`: [sif_macro] A case has an insufficient amount of arguments (2 parameter(s) registered, but 1 argument(s) were supplied)
